versioned_docs/version-2022.2.1/professor/gabriele_antico_freiria.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
const data = {
  title: "Gabriele Antico Freiria",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: []
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Biologia II",
          size: 2,
          teachers: [
            "Gabriele Antico Freiria"
          ],
          classroom: "Laboratório de Biologia",
          students: [
            "IIW2021"
          ],
          time: "10:15 - 11:05"
        },
        {
          subject: "Genética de populações e evolução",
          size: 2,
          teachers: [
            "Gabriele Antico Freiria"
          ],
          classroom: "Sala 12-2",
          students: [
            "BIO2019"
          ],
          time: "19:00 - 19:50"
        },
        {
          subject: "PCCC 8 - Origem e evolução da vida",
          size: 1,
          teachers: [
            "Gabriele Antico Freiria"
          ],
          classroom: "Sala 12-2",
          students: [
            "BIO2019"
          ],
          time: "21:00 - 21:50"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Genética molecular",
          size: 2,
          teachers: [
            "Gabriele Antico Freiria"
          ],
          classroom: "Sala 9-2",
          students: [
            "BIO_ESPECIAL"
          ],
          time: "21:00 - 21:50"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: []
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "Genética de populações e evolução",
          size: 2,
          teachers: [
            "Gabriele Antico Freiria"
          ],
          classroom: "Sala 12-2",
          students: [
            "BIO2019"
          ],
          time: "19:00 - 19:50"
        },
        {
          subject: "Genética molecular",
          size: 2,
          teachers: [
            "Gabriele Antico Freiria"
          ],
          classroom: "Sala 9-2",
          students: [
            "BIO_ESPECIAL"
          ],
          time: "21:00 - 21:50"
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Gabriele Antico Freiria

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
